--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -17,3 +17,12 @@ jobs:
           import platform
           print(platform.processor())
         shell: python
+
+  run.windows-commands:
+    runs-on: windows-latest
+    steps:
+      - name: Directory Powershell
+        run: get-Location
+      - name: Directory Bash
+        run: pwd
+        shell: bash
